# FLUX_2.0_QLoRA_Pokemon

./: .gitignore  captions.json  gemini.md  generate_caption.py  load_dataset.py  main.ipynb  pyproject.toml  training.py
